# Esp32OS

./: .gitignore  BRANDING_POLICY.md  CMakeLists.txt  LICENSE  NOTICE.md  README.md  eim_config.toml  partitions.csv  sdkconfig.defaults
.github/workflows/: master-release.yml  pr-checks.yml
components/os_drivers/: CMakeLists.txt
components/os_drivers/include/: os_drivers.h
components/os_drivers/src/: os_drivers.c
components/os_env/: CMakeLists.txt
components/os_env/include/: os_env.h
components/os_env/src/: os_env.c
components/os_env/test/: os_env_test.c
components/os_fs/: CMakeLists.txt
components/os_fs/include/: os_fs.h
components/os_fs/src/: os_fs.c
components/os_fs/test/: os_fs_test.c
components/os_hal/: CMakeLists.txt
components/os_hal/include/: os_hal.h
components/os_ipc/: CMakeLists.txt
components/os_ipc/include/: os_ipc.h
components/os_kernel/: CMakeLists.txt
components/os_logging/: CMakeLists.txt
components/os_mqtt/: CMakeLists.txt
components/os_networking/: CMakeLists.txt
components/os_ota/: CMakeLists.txt
components/os_pwm/: CMakeLists.txt
components/os_scheduler/: CMakeLists.txt
components/os_shell/: CMakeLists.txt
components/os_shell/include/: os_shell.h
components/os_shell/src/: os_shell.c  shell_commands.c
components/os_timer/: CMakeLists.txt
docs/: ARCHITECTURE.md  COMPONENTS.md  CONTRIBUTING.md  EXTENDING.md  TESTING.md  USER_GUIDE.md
examples/: sensor_logger.c
main/: CMakeLists.txt  main.c
tools/: flash.sh  test_build_health.py  test_integration.py  test_shell_host_integration.py
(+24 files in other folders)
